# scan-namer

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  config.json  config.json.example  prompts.json  pyproject.toml  scan-namer  scan_namer.py  setup_instructions.md  update-models  update_models.py
docs/superpowers/plans/: 2026-04-26-update-models-script.md  2026-04-27-lmstudio-provider.md  2026-06-24-cli-overrides-and-defaults.md  2026-06-24-test-suite.md
docs/superpowers/specs/: 2026-04-26-update-models-script-design.md  2026-04-27-lmstudio-provider-design.md  2026-06-24-cli-overrides-and-defaults-design.md  2026-06-24-test-suite-design.md
tests/: conftest.py  test_config_manager.py  test_drive_folder.py  test_filename.py  test_import.py  test_pdf_and_url.py  test_provider_model_resolution.py  test_scan_namer.py  test_secret_resolution.py  test_update_models.py
